@@ -1,10 +1,10 @@
 '------------------------------------------------------------------------------
 ' <auto-generated>
-'     Deze code is gegenereerd met een hulpprogramma.
-'     Runtime-versie:4.0.30319.42000
+'     This code was generated by a tool.
+'     Runtime Version:4.0.30319.42000
 '
-'     Als u wijzigingen aanbrengt in dit bestand, kan dit onjuist gedrag veroorzaken wanneer
-'     de code wordt gegenereerd.
+'     Changes to this file may cause incorrect behavior and will be lost if
+'     the code is regenerated.
 ' </auto-generated>
 '------------------------------------------------------------------------------
 
